2004-02-01  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b19

	* Fixed a bug in save_photos caused by the new tabbed interface.  We
	  were not properly referencing the opener so the progress dialog was
	  not going away after adding photos.

2004-01-30  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b18

	* Fixed several issues in add_photos:
	  - Removed ob_start/ob_end buffering code; if includes are leaking
	    text we want to know about it and fix it.
	  - Got rid of a warning when add_photos_mode cookie isn't set
	  - Fixed warnings in save_photos.php when you submit an empty form
	  - Added window.focus() to add_photos.php so that it doesn't pop under
	  - Fixed Javascript to display progress dialog in upload forms so that
	    they refer to the proper object

2004-01-30 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b17
	
	* Change: Skin Update

2004-01-30 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b16

	* New: Added Jenskin. A Skin that looks likt the configwizard.

	* Change: Some cosmetic changes.

2004-01-30 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b15

	* Bugfix: Added GALLERY_BASEDIR for inclusion of frame files.
		  and add_photos_frame.php to safetoinclude array.
	
2004-01-29  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b14

	* Added pretty nasty hack to reload the album page in Mini applet
	  mode after upload completes (this relies on add_photos_frame.php
	  and add_photos_refresh.php; if anyone has a better way of
	  executing JavaScript from Java, I'd like to know).

	* Added cookie so that add_photos opens on same tab the user
	  selected last time he used add_photos.

2004-01-29 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b13

	* Bugfix: Added GALLERY_BASEDIR for inclusion of includes files.

	* Bugfix: Use function to create URLs.

	* Bugfix: Added missing file.

2004-01-29 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b12

	* Change: Created lib/Form.php.

	* New: Added "(un)check all" and "invert" selection in config wizard for languages.
