@@ -22,164 +22,164 @@
 ?>
 <?php
 function fs_copy($source, $dest) {
-	$umask = umask(0133);
-	$results = copy(
-		fs_import_filename($source, 0), 
-		fs_import_filename($dest, 0));
-	umask($umask);
+    $umask = umask(0133);
+    $results = copy(
+        fs_import_filename($source, 0), 
+        fs_import_filename($dest, 0));
+    umask($umask);
 }
 
 function fs_file_exists($filename) {
-	$filename = fs_import_filename($filename, 0);
-	debug("Checking for [$filename] == " . @file_exists($filename));
-	return @file_exists($filename);
+    $filename = fs_import_filename($filename, 0);
+    debug("Checking for [$filename] == " . @file_exists($filename));
+    return @file_exists($filename);
 }
 
 function fs_is_link($filename) {
-	$filename = fs_import_filename($filename, 0);
-	return is_link($filename);
+    $filename = fs_import_filename($filename, 0);
+    return is_link($filename);
 }
 
 function fs_filesize($filename) {
-	$filename = fs_import_filename($filename, 0);
-	return filesize($filename);
+    $filename = fs_import_filename($filename, 0);
+    return filesize($filename);
 }
 
 function fs_fopen($filename, $mode, $use_include_path=0) {
-	$filename = fs_import_filename($filename, 0);
-	return fopen($filename, $mode, $use_include_path);
+    $filename = fs_import_filename($filename, 0);
+    return fopen($filename, $mode, $use_include_path);
 }
 
 function fs_is_dir($filename) {
-	$filename = fs_import_filename($filename, 0);
-	return @is_dir($filename);
+    $filename = fs_import_filename($filename, 0);
+    return @is_dir($filename);
 }
 
 function fs_is_file($filename) {
-	$filename = fs_import_filename($filename, 0);
-	return @is_file($filename);
+    $filename = fs_import_filename($filename, 0);
+    return @is_file($filename);
 }
 
 function fs_is_readable($filename) {
-	$filename = fs_import_filename($filename, 0);
-	return @is_readable($filename);
+    $filename = fs_import_filename($filename, 0);
+    return @is_readable($filename);
 }
 
 
 function fs_opendir($path) {
-	$path = fs_import_filename($path, 0);
-	return opendir($path);
+    $path = fs_import_filename($path, 0);
+    return opendir($path);
 }
 
 function fs_rename($oldname, $newname) {
-	$oldname = fs_import_filename($oldname, 0);
-	$newname = fs_import_filename($newname, 0);
+    $oldname = fs_import_filename($oldname, 0);
+    $newname = fs_import_filename($newname, 0);
 
-	/* 
-	 * It appears that win32 doesn't like it when you rename 
-	 * a file to end with ".dat.bak".  Why?  This is very 
-	 * annoying.
-	 */
-	$newname = str_replace(".dat.bak", ".bak", $newname);
+    /* 
+     * It appears that win32 doesn't like it when you rename 
+     * a file to end with ".dat.bak".  Why?  This is very 
+     * annoying.
+     */
+    $newname = str_replace(".dat.bak", ".bak", $newname);
 
-	debug("Rename $oldname -> $newname");
-	if (file_exists("$newname.bak")) {
-		unlink("$newname.bak");
-	}
-	if (file_exists("$newname")) {
-		return rename($newname, "$newname.bak") &&
-			rename($oldname, $newname);
-	} else {
-		return rename($oldname, $newname);
-	}
+    debug("Rename $oldname -> $newname");
+    if (file_exists("$newname.bak")) {
+        unlink("$newname.bak");
+    }
+    if (file_exists("$newname")) {
+        return rename($newname, "$newname.bak") &&
+            rename($oldname, $newname);
+    } else {
+        return rename($oldname, $newname);
+    }
 }
 
 function fs_stat($filename) {
-	$filename = fs_import_filename($filename, 0);
-	return stat($filename);
+    $filename = fs_import_filename($filename, 0);
+    return stat($filename);
 }
 
 function fs_unlink($filename) {
-	$filename = fs_import_filename($filename, 0);
-	return unlink($filename);
+    $filename = fs_import_filename($filename, 0);
+    return unlink($filename);
 }
 
 function fs_executable($filename) {
-	$filename = fs_import_filename($filename, 0);
-	if (!strstr($filename, ".exe")) {
-		$filename .= ".exe";
-	}
-	return $filename;
+    $filename = fs_import_filename($filename, 0);
+    if (!strstr($filename, ".exe")) {
+        $filename .= ".exe";
+    }
+    return $filename;
 }
 
 function fs_mkdir($filename, $perms) {
-	$umask = umask(0);
-	$results = mkdir(fs_import_filename($filename, 0), $perms);
-	umask($umask);
-	return $results;
+    $umask = umask(0);
+    $results = mkdir(fs_import_filename($filename, 0), $perms);
+    umask($umask);
+    return $results;
 }
 
 function fs_import_filename($filename, $for_exec=1) {
-	debug("Import before: $filename");
-	# Change / and : to \ and ;
-	#
- 	$filename = str_replace("/", "\\", $filename);
- 	$filename = str_replace(":", ";", $filename);
+    debug("Import before: $filename");
+    # Change / and : to \ and ;
+    #
+    $filename = str_replace("/", "\\", $filename);
+    $filename = str_replace(":", ";", $filename);
 
-	# Change D;\apps to D:\apps (the : got mangled by the above
-	# transform).
-	#
-	if ($filename{1} == ';') {
-		$filename{1} = ':';
-	}
+    # Change D;\apps to D:\apps (the : got mangled by the above
+    # transform).
+    #
+    if ($filename{1} == ';') {
+        $filename{1} = ':';
+    }
 
-	# Convert "D\whoami" to "D:\whoami"
-	#
-	$filename = ereg_replace("^([A-Z])\\\\(.*)", "\\1:\\\\2", $filename);
+    # Convert "D\whoami" to "D:\whoami"
+    #
+    $filename = ereg_replace("^([A-Z])\\\\(.*)", "\\1:\\\\2", $filename);
 
-	# Convert "\Perl\bin\;D/whoami" to "D:\Perl\bin\whoami"
-	#
-	$filename = ereg_replace("(.*);([A-Z])\\\\(.*)", "\\2:\\1\\3", $filename);
+    # Convert "\Perl\bin\;D/whoami" to "D:\Perl\bin\whoami"
+    #
+    $filename = ereg_replace("(.*);([A-Z])\\\\(.*)", "\\2:\\1\\3", $filename);
 
-	if ($for_exec) {
-		if (strstr($filename, " ")) {
-			$filename = "\"$filename\"";
-		}
-	}	
+    if ($for_exec) {
+        if (strstr($filename, " ")) {
+            $filename = "\"$filename\"";
+        }
+    }   
 
-	debug("Import after: $filename");
-	return $filename;
+    debug("Import after: $filename");
+    return $filename;
 }
 
 function fs_export_filename($filename) {
-	
-	# Convert "d:\winnt\temp" to "d:/winnt/temp"
-	#
-	while (strstr($filename, "\\\\")) {
-		$filename = str_replace("\\\\", "\\", $filename);
-	}
-	$filename = str_replace("\\", "/", $filename);
+    
+    # Convert "d:\winnt\temp" to "d:/winnt/temp"
+    #
+    while (strstr($filename, "\\\\")) {
+        $filename = str_replace("\\\\", "\\", $filename);
+    }
+    $filename = str_replace("\\", "/", $filename);
 
-	return $filename;
+    return $filename;
 }
 
 function fs_exec($cmd, &$results, &$status, $debugfile) {
 
-	// We can't redirect stderr with Windows.  Hope that we won't need to.
-	return exec("cmd.exe /c \"$cmd\"", $results, $status);
+    // We can't redirect stderr with Windows.  Hope that we won't need to.
+    return exec($cmd, $results, $status);
 }
 
 function fs_tempdir() {
-	return export_filename(getenv("TEMP"));
+    return export_filename($gallery->app->tmpDir); 
 }
 
 function fs_is_executable($filename) {
-	return eregi(".(exe|com)$", $filename);
+    return eregi(".(exe|com|vbs)$", $filename);
 }
 
 function debug($msg) {
-	if (0) {
-		print "<br>$msg<br>";
-	}
+    if (0) {
+        print "<br>$msg<br>";
+    }
 }
 ?>
